# poo2021-2022

./: .gitignore
Laborator 1/: CMakeLists.txt  ex2.cpp  ex2_functii.cpp
Laborator 10/: CMakeLists.txt  main.cpp
Laborator 11 - Cod Pentru Examen/vs2022/: vs2022.sln
Laborator 2/: ex1_a.cpp  ex3.cpp  ex4_functii.cpp
Laborator 2 - Starter/: CMakeLists.txt  ex0.cpp  ex1.cpp  ex3.cpp  ex4.cpp  ex6.cpp
Laborator 4/: Besliu Radu L4.cpp  CMakeLists.txt  README.md  readme.cpp
Laborator 4/Solutions/: Besliu Radu.cpp  CMakeLists.txt
Laborator 5/: 1_College.cpp  CMakeLists.txt  readme.cpp
Laborator 6/: 1_Juice_to_Pies.cpp  6_Fill.cpp  CMakeLists.txt  IoBase.cpp  readme.cpp
Laborator 7 - 143/: CMakeLists.txt  main2.cpp
Laborator 7 - 143/solved/: main1.cpp  main2.cpp
Laborator 7 - 143/util/: functions.cpp
Laborator 8 - interactive menus/: CMakeLists.txt  main1_solved.cpp  main3.cpp  main4.cpp  main5.cpp
Laborator 9 - clase abstracte, mini Colocviu pas-cu-pas/: Laboratorul 9.docx
Laborator 9 - clase abstracte, mini Colocviu pas-cu-pas/Acing Your Exam/: CMakeLists.txt  pas1.cpp  pas2.cpp  pas3.cpp  pas4.cpp  pas5.cpp  pas6.cpp  pas7.cpp
Laborator 9 - clase abstracte, mini Colocviu pas-cu-pas/Clase Abstracte/: CMakeLists.txt
Laborator3/: CMakeLists.txt  Hutan_Mihai.cpp  Pasare_Francisca_1.cpp
Proiect1/: CMakeLists.txt  Readme.md  main.cpp  main1.cpp  main2.cpp  main4.cpp
Proiect1/143/: Cringanu Proiect1.cpp  Cringanu_Denis-Florin_143.rar
Proiect2/: Proiectul 2.docx  README.md
Proiect2/CLionExamples/: CMakeLists.txt  main.cpp
Proiect2/project2/: CMakeLists.txt  Proiectul 2.docx
Proiect2/scripts/: execute_c++.py  generate_exe.py
Proiect3/: CMakeLists.txt
Proiect3/gui/: main.cpp
Proiect3/project2/: Proiectul 3.docx  main.cpp  ~$oiectul 2.docx
Proiect3/scripts/: requirements.txt
colocviu_pascupas/: CMakeLists.txt  main.cpp
proiect2 solutii/Proiect2 143/: 143-Păun_Andreea_Alexandra.cpp  143_Besliu_Radu-Stefan.cpp  143_Cringanu_Denis-Florin.cpp  143_Crivoi_Carla.cpp  143_Cucos_Maria-Marianita.cpp  143_Ghetoiu_Gheorghe_Laurentiu.cpp  143_Stanciu_Ioan-Carol.cpp  CMakeLists.txt  Cazacu.cpp  Cristea.cpp  Hutan.cpp  I Cristiana.cpp  Nafornita_Adrian_143_Proiect_2.rar  Neghita Ilinca.cpp  Petre.cpp  Totolici.cpp  Vadile Eduard.cpp  proiect2POOChiricutaMarina143.rar
proiect2 solutii/Proiect2 143 - din 3 mai/: CMakeLists.txt  Colocviu_Cringanu_Denis-Florin.rar  Nechita Ilinca.cpp  Totolici Alexandru Gabriel.cpp  Vasile Eduard.cpp
proiect2 solutii/Proiect2 143/ALHAFEZ_NABIL/: CMakeLists.txt
proiect2 solutii/Proiect2 143/ALHAFEZ_NABIL/util/: computer.h  enumerable.h  firma.h  ransomware_virus.h  virus_base.h  virus_keylogger.h
proiect2 solutii/Stanciu_Ioan-Carol_grupa_143 - Proiectele 1 si 2/: Proiect 1 POO.cpp  Proiect 2 POO.cpp
proiect2 solutii/proiect2 152/: 152_Airinei_AndreiCristian.cpp  Armand Gheorghe.cpp  (+15 more)
sandbox/: CMakeLists.txt
scripts/: Grupa 152.xlsx  data.py  main.py  requirements.txt
(+132 files in other folders)
