cmake_minimum_required(VERSION 3.21)
project(POO)

set(CMAKE_CXX_STANDARD 14)

#add_executable(POO ex1_a.cpp)
#add_executable(POO ex1_b.cpp)
#add_executable(POO ex2.cpp)
#add_executable(POO ex2_functii.cpp)
#add_executable(POO ex3.cpp)
add_executable(POO ex4_functii.cpp)
#add_executable(POO ex5.cpp)
#add_executable(POO ex6.cpp)
